--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Karrthik-Arya
 
 # baseurl: The subpath of your site
 # > set this to "", if you renamed the repository to <user>.github.io
-baseurl: "/karrthikweb"
+baseurl: "/my_web"
 
 # LANDING PAGE
 # username: This will displayed on the landing page as your name.
