--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,18 @@ baseurl: "/my_web"
 username: Karrthik Arya
 # typing_text: This will be typed before 'scroll down for more'.
 # > set this to your job title, e.g. Fullstack Developer
-typing_text: Student, Coder, Problem Solver
+typing_text: Just Another Momentary Speck within an Indifferent Universe
 # email: Your E-Mail address for the email button.
 email: karrthikarya@gmail.com
 # For every social button you want to display, set your username or userid
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
 github_username: karrthik-arya
-codepen_username: exampleUser
-dev_username: exampleUser
-linkedin_username: exampleUser
-twitter_username: exampleUser
+codepen_username: 
+dev_username: 
+linkedin_username: karrthik-arya-30997320b
+twitter_username: 
+facebook_username: karrthik.arya
 
 # ABOUT ME SECTION
 # show_aboutme_card:
