--- a/_data/skills-languages.yml
+++ b/_data/skills-languages.yml
@@ -5,38 +5,28 @@
 # - name: Language
 #   weight: 5
 
-- name: TypeScript
+- name: C++
   weight: 5
 
 - name: JavaScript
   weight: 4
 
 - name: Python
-  weight: 2
+  weight: 5
 
-- name: HTML5
+- name: C
   weight: 4
 
-- name: CSS3
+- name:  LATEX
   weight: 3
 
-- name: SASS
+- name: VHDL
   weight: 3
 
-- name: Java
+- name: HTML
   weight: 1
 
-- name: Dart
+- name: CSS
   weight: 1
 
-- name: Swift
-  weight: 1
 
-- name: Kotlin
-  weight: 1
-
-- name: C++
-  weight: 2
-
-- name: Ruby
-  weight: 2
