--- a/_data/skills-tools.yml
+++ b/_data/skills-tools.yml
@@ -9,28 +9,16 @@
   weight: 5
 
 - name: Bash
-  weight: 3
-
-- name: Scrum
-  weight: 3
-
-- name: Travis CI
-  weight: 1
-
-- name: Jenkins
-  weight: 1
-
-- name: Chrome DevTools
-  weight: 2
-
-- name: npm
-  weight: 2
-
-- name: gulp
   weight: 4
 
-- name: VS Code
+- name: GNURadio
   weight: 3
+
+- name: AutoCAD
+  weight: 1
+
+- name: Quartus
+  weight: 1
 
 - name: Postman
-  weight: 4
+  weight: 2
